# medical-research-data-extractor

./: .gitignore  README.md  pyproject.toml
src/: app.py  explorer.py  test_extractors.py
src/utils/detailed_report/: detailed_extractor.py  detailed_report_pattern.py
src/utils/m_report/: extractor.py
src/utils/medical_report/: patterns.py
src/utils/summary_report/: summary_extractor.py  summary_report_columns.py  summary_report_pattern.py
